<resources>
    <string name="app_name">To do list</string>
    <string name="txt_main">Tarefas</string>
    <string name="txt_date">Data</string>
    <string name="txt_description">Descrição</string>
    <string name="txt_time">Hora</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_create_task">Criar Tarefa</string>
    <string name="txt_title">Título</string>
    <string name="txt_new_task">Nova tarefa</string>
    <string name="txt_edit_menu">Editar</string>
    <string name="txt_menu_del">Deletar</string>
    <string name="txt_no_tasks">Ops! Você não possui\n nenhuma tarefa!</string>
</resources>